fix bug on safari

--- a/src/pages/layout.module.css
+++ b/src/pages/layout.module.css
@@ -54,6 +54,7 @@
 .projectContent {
   padding: 2vw;
   display: flex;
+  transform: translateZ(1000px);
 }
 
 .projectCardBg {
